split db by user WIP DOES NOT WORK
